fix z-index of suggestions

--- a/source/css/object/component/_category-browser-view.sass
+++ b/source/css/object/component/_category-browser-view.sass
@@ -6,15 +6,32 @@
     z-index: -1
     --suggest-x-padding: 1rem
     .suggest
-        z-index: 1
+        z-index: 2
+        display: flex
+        justify-content: space-between
+        >.column-title-wrapper
+            display: flex
+            flex: 1
+            justify-content: center
+            >.column-title
+                display: flex
+                width: min(90%, 25rem)
+                gap: 1rem
+                >suggest-element
+                    flex: 1
+                >h3
+                    flex-grow: 0
+                    font-size: 1.2rem
+                    color: white
         .container
             position: relative
             overflow: visible
-            width: 20rem
+            width: 100%
             >.input-container
                 position: relative
                 >input[type='text']
                     width: 100%
+                    line-height: 1
                     border-radius: 100px
                     outline: none
                     border: 1px var(--color-dark-gray) solid
